<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioRSN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hintRSN"
                android:visibility="visible"/>

            <RadioButton
                android:id="@+id/radioBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bin" />

            <RadioButton
                android:id="@+id/radioPallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pallet"
                android:visibility="visible"/>

            <RadioButton
                android:id="@+id/radioEAN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ean"
                android:visibility="visible"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnCloseOne"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/close"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_toLeftOf="@+id/btnSelect"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />
        <Button

            android:id="@+id/btnSelect"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/select"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/btnCloseOne"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRsnTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlSelection"
        android:layout_marginTop="10dp"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="4">


            <android.support.v7.widget.CardView
                android:id="@+id/cvScan"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:cardBackgroundColor="@color/scanColor"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivScan"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/fullscreen_img" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tvScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRsnTracking"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_weight="2.8">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btnClear"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/button_shape"
                android:elevation="30dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="0.2"/>

            <Button
                android:id="@+id/btnCloseTwo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_close_shape"
                android:elevation="30dp"
                android:foreground="@drawable/button_cross_close"
                android:foregroundGravity="center"
                android:text="@string/putaway"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="0"/>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>