<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="3dp"
    android:background="@color/white">


    <android.support.v7.widget.CardView
        android:id="@+id/cvScanRSN"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/rsnColor"
        app:cardCornerRadius="22.5dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/ivScanRSN"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/fullscreen_img" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvScanRSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvScanRSN"
        android:layout_centerHorizontal="true"
        android:text="@string/scanRSN"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayoutRSN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="102dp">

        <EditText
            android:id="@+id/etRSN"
            style="@style/editTextStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scan_enter_part_no_in_rtr"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/lblScannedSku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputLayoutRSN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblScannedSku"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayoutStackCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblDesc"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/etStackCount"
            style="@style/editTextStyleSmall"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:hint="@string/stack_count"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayoutPrintQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblDesc"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/etPrintQty"
            style="@style/editTextStyleSmall"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:hint="@string/print_qty"
            android:inputType="date"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/button_shape"
        android:elevation="30dp"
        android:text="@string/print"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/button_close_shape"
        android:elevation="30dp"
        android:foreground="@drawable/button_cross_close"
        android:foregroundGravity="center"
        android:text="@string/putaway"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>