<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlVLPDList"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutDispatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/etDispatch"
                style="@style/editTextStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dispatch"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnPick"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:background="@drawable/button_shape"
            android:text="@string/pick"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_close_shape"
            android:elevation="30dp"
            android:foreground="@drawable/button_cross_close"
            android:foregroundGravity="center"
            android:text="@string/putaway"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>