<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlStRefSelect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <TextView
            android:id="@+id/tvSelectStRef"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/selectStRef">

        </TextView>

        <com.inventrax.nilkamal_vna.searchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectStRef"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvSelectStRef">

        </com.inventrax.nilkamal_vna.searchableSpinner.SearchableSpinner>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:background="@drawable/button_shape"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_close_shape"
            android:elevation="30dp"
            android:foreground="@drawable/button_cross_close"
            android:foregroundGravity="center"
            android:text="@string/putaway"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>