<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.NoActionBar.FullScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSelectDivision"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:layout_toStartOf="@+id/spinnerSelectDivision"
            android:text="@string/select_division">

        </TextView>

        <com.inventrax.nilkamal_vna.searchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectDivision"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

        </com.inventrax.nilkamal_vna.searchableSpinner.SearchableSpinner>


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/athome" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlLogo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <!--<com.inventrax.athome.util.NoImeEditText
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp" />-->

        <EditText
            android:id="@+id/etUsername"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/email_img"
            android:drawablePadding="@dimen/activity_login_padding_left"
            android:hint="@string/userHint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etPass"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:drawableLeft="@drawable/lock_img"
            android:drawablePadding="@dimen/activity_login_padding_left"
            android:fontFamily="sans-serif"
            android:hint="@string/passHint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etPass"
            android:buttonTint="@color/colorAccent"
            android:text="@string/rememberMe" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbRememberMe"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llButtons"
            android:layout_marginTop="40dp"
            android:text="Version" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtVersionName"
            android:layout_marginTop="3dp"
            android:text="Release Date" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/settings" />
</RelativeLayout>